@@ -5,7 +5,16 @@ import java.util.HashMap;
 /**
  *
  * 启动参数：-Xmx512m -Xms512m -XX:+UseSerialGC -XX:+PrintGCDetails -Xmn1m
- * Created by chenyang on 2017/2/2.
+ *
+ * -XX:+UseSerialGC:新生代和老年代都用单线程的串行回收器。适合单核并发能力差得处理器。
+ * -XX:+UseParNewGC:新生代用并行的ParNew回收期，老年代都用单线程的串行回收器。适合多核，并发能力强的处理器。
+ * -XX:+UseParallelGC:新生代使用ParallelGC回收器，老年代使用串行回收器。
+   -XX:+UseParallelOldGC:新生代使用ParallelGC回收器，老年代使用ParallelOldGC回收器。
+ * 1）--
+ * -XX:+UseConclMarkSweepGC:老年代使用CMS回收器。
+ *
+ * Created by chenyang on 20
+ * 17/2/2.
  */
 
 public class StopWorldTest {
